--- a/platformio.ini
+++ b/platformio.ini
@@ -32,3 +32,4 @@ build_flags =
     -D SPI_FREQUENCY=27000000
     -D SPI_TOUCH_FREQUENCY=2500000
     -D SPI_READ_FREQUENCY=16000000
+extra_scripts = ./extra_script.py
